--- a/Jiu Jitsu Assistant/MyTechniques.xaml
+++ b/Jiu Jitsu Assistant/MyTechniques.xaml
@@ -20,38 +20,34 @@
          <ColumnDefinition Width="Auto"/>
          <ColumnDefinition Width="*"/>
       </Grid.ColumnDefinitions>
-      <DataGrid x:Name="techniquesGrid" HorizontalAlignment="Left" Margin="64,235,0,0" VerticalAlignment="Top" AutoGenerateColumns="False"
-                ItemsSource="{Binding}" Height="256" VerticalScrollBarVisibility="Visible" Grid.Column="0" CanUserAddRows="False" Width="527" CellEditEnding="updateTechniqueFromDataGrid"
+
+
+      <Image Margin="523,33,514,481" Source="images/bjj-logo.png" Grid.ColumnSpan="3" />
+
+      <DataGrid x:Name="techniquesGrid" HorizontalAlignment="Left" Margin="68,259,0,0" VerticalAlignment="Top" AutoGenerateColumns="False"
+                ItemsSource="{Binding}" Height="256" VerticalScrollBarVisibility="Visible" Grid.Column="0" CanUserAddRows="False" Width="454" CellEditEnding="updateTechniqueFromDataGrid"
                 PreviewKeyDown="deletingRowFromDatagrid" SelectionMode="Single" SelectionChanged="lookupSetupsForTechnique">
          <DataGrid.Columns>
             <DataGridTextColumn Header="Name" Binding="{Binding name}" Width="200" />
-            <DataGridTextColumn Header="Learned" Binding="{Binding date_learned, StringFormat=\{0:dd.MM.yyyy\}}" Width="100"/>
-            <DataGridTextColumn Header="From" Binding="{Binding position_from}" Width="80" />
-            <DataGridTextColumn Header="To" Binding="{Binding position_to}" Width="80" />
-            <DataGridTextColumn Header="Belt" Binding="{Binding belt_level}" Width="*"/>
+            <DataGridTextColumn Header="Learned" Binding="{Binding date_learned, StringFormat=\{0:dd.MM.yyyy\}}" Width="80"/>
+            <DataGridTextColumn Header="From" Binding="{Binding position_from}" Width="77" />
+            <DataGridTextColumn Header="To" Binding="{Binding position_to}" Width="*" />
+            <DataGridTextColumn Header="Belt" MaxWidth="0" Binding="{Binding belt_level}" Width="*"/>
             <DataGridTextColumn MaxWidth="0" Header="Id" Binding="{Binding technique_id}" Width="*"/>
          </DataGrid.Columns>
       </DataGrid>
       <DataGrid x:Name="techniqueGroupsGrid" HorizontalAlignment="Left" VerticalAlignment="Top" AutoGenerateColumns="False" 
                 SelectedCellsChanged="techniqueGroupsGrid_SelectedCellsChanged" ItemsSource="{Binding}" 
-                RenderTransformOrigin="2.386,4.962" Margin="64,89,0,0" CanUserAddRows="False">
+                RenderTransformOrigin="2.386,4.962" Margin="68,89,0,0" CanUserAddRows="False">
          <DataGrid.Columns>
             <DataGridTextColumn Header="Name" Binding="{Binding name}" />
          </DataGrid.Columns>
       </DataGrid>
 
+      <TextBlock x:Name="setups_textblock" Foreground="White" HorizontalAlignment="Left" Margin="129,552,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="138" Width="462"/>
+      <Label x:Name="setups_label" Content="Setups:" HorizontalAlignment="Left" Margin="64,547,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.684,-0.385"/>
 
 
-      <GridSplitter Grid.Column="1" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="8">
-         <GridSplitter.Template>
-            <ControlTemplate TargetType="{x:Type GridSplitter}">
-               <Grid>
-                  <Button Content="⁞" />
-                  <Rectangle Fill="#000000" />
-               </Grid>
-            </ControlTemplate>
-         </GridSplitter.Template>
-      </GridSplitter>
 
 
       <Label x:Name="label" Content="Add new technique" Grid.Column="2" HorizontalAlignment="Left" Margin="216,14,0,0" VerticalAlignment="Top" FontSize="24" RenderTransformOrigin="0.545,0.19"/>
@@ -104,10 +100,6 @@
       <Button x:Name="add_setup_button" Content="Add setup" Grid.Column="2" HorizontalAlignment="Left" Margin="419,609,0,0" VerticalAlignment="Top" Width="100" Click="addSetup" IsEnabled="False"/>
       <Button x:Name="finish_technique_button" Content="Finish" Grid.Column="2" HorizontalAlignment="Left" Margin="158,688,0,0" VerticalAlignment="Top" Width="361" Click="finishAddingTechniqueAndSetups"/>
       <Label x:Name="setup_label" Content="Setup" Grid.Column="2" HorizontalAlignment="Left" Margin="158,465,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.184,1.615" FontSize="18"/>
-
-
-      <TextBlock x:Name="setups_textblock" HorizontalAlignment="Left" Margin="129,552,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="138" Width="462"/>
-      <Label x:Name="setups_label" Content="Setups:" HorizontalAlignment="Left" Margin="64,547,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.684,-0.385"/>
 
 
 
