--- a/Jiu Jitsu Assistant/MainWindow.xaml
+++ b/Jiu Jitsu Assistant/MainWindow.xaml
@@ -2,11 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:p = "clr-namespace:Jiu_Jitsu_Assistant.Properties"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Jiu_Jitsu_Assistant"
         mc:Ignorable="d"
-        Title="Jiu Jitsu Assistant" 
+        Title="{x:Static p:Resources.Main_Title}" 
         TextBlock.TextAlignment="Center" 
+        KeyDown="KeyPressed"
         ResizeMode="NoResize" 
         Height="800px" Width="1300px"
         Icon="/images/bjj-logo.png"
@@ -48,5 +50,6 @@
             <ImageBrush ImageSource="/images/brown-belt.jpg" />
          </Button.Background>
       </Button>
+      <Label x:Name="settingsLabel" Content="Press 's' for settings" Grid.Column="2" Foreground="Black" FontSize="14" HorizontalAlignment="Left" Margin="242,200,0,0" Grid.Row="2" VerticalAlignment="Top"/>
    </Grid>
 </Window>
